Project

General

Profile

Actions

Bug #39166

closed

mds: error "No space left on device" when create a large number of dirs

Added by Erqi Chen about 5 years ago. Updated over 4 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
-
Target version:
% Done:

0%

Source:
Community (dev)
Tags:
Backport:
nautilus,mimic,luminous
Regression:
No
Severity:
2 - major
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
MDS
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

When create dirs under the ceph mount path quickly, it returns "No space left on device" after the number beyond the mds_bal_fragment_size_max.
mkdir: cannot create directory ‘200645’: No space left on device
mkdir: cannot create directory ‘200691’: No space left on device
mkdir: cannot create directory ‘200705’: No space left on device
mkdir: cannot create directory ‘200760’: No space left on device


Related issues 3 (0 open3 closed)

Copied to CephFS - Backport #39689: mimic: mds: error "No space left on device" when create a large number of dirsResolvedPrashant DActions
Copied to CephFS - Backport #39690: nautilus: mds: error "No space left on device" when create a large number of dirsResolvedPrashant DActions
Copied to CephFS - Backport #39691: luminous: mds: error "No space left on device" when create a large number of dirsResolvedPatrick DonnellyActions
Actions #1

Updated by Greg Farnum about 5 years ago

  • Project changed from Ceph to CephFS
Actions #2

Updated by Patrick Donnelly about 5 years ago

  • Start date deleted (04/10/2019)

What version are you running?

Actions #3

Updated by Erqi Chen about 5 years ago

Patrick Donnelly wrote:

What version are you running?

Luminous 12.2.10 I have fix this issue by pull request 27480.

Actions #4

Updated by Patrick Donnelly about 5 years ago

  • Subject changed from ceph mds error "No space left on device" when create a large number of dirs to mds: error "No space left on device" when create a large number of dirs
  • Status changed from New to Fix Under Review
  • Assignee set to Erqi Chen
  • Target version set to v15.0.0
  • Source set to Community (dev)
  • Backport set to nautilus,mimic,luminous
  • Pull request ID set to 27480
  • Affected Versions v12.2.10 added
  • Component(FS) MDS added
Actions #5

Updated by Patrick Donnelly almost 5 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #6

Updated by Nathan Cutler almost 5 years ago

  • Copied to Backport #39689: mimic: mds: error "No space left on device" when create a large number of dirs added
Actions #7

Updated by Nathan Cutler almost 5 years ago

  • Copied to Backport #39690: nautilus: mds: error "No space left on device" when create a large number of dirs added
Actions #8

Updated by Nathan Cutler almost 5 years ago

  • Copied to Backport #39691: luminous: mds: error "No space left on device" when create a large number of dirs added
Actions #9

Updated by Nathan Cutler over 4 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF