mds: check dir fragment to split dir if mkdir makes it oversized. In handle_client_mkdir we hit_dir (via hit_inode) in mkdir finish callback, but by then we might have overshot the split size (multiple mkdir in flight), so check dir fragment for an early chance to split the dir if mkdir makes it oversized.

Fixes: https://tracker.ceph.com/issues/39166
Signed-off-by: Erqi Chen <bestchenerqi@126.com>